# cpp-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build-tool.sh  make
src/: CMakeLists.txt  main.cpp
src/addition/: CMakeLists.txt  addition.cpp  addition.h
src/division/: CMakeLists.txt  division.cpp  division.h
test/: CMakeLists.txt  divisble_test.cpp  main.cpp
test/src/addition/: addition_test.cpp
test/src/division/: division_test.cpp
